upload notebook bab 7

--- a/pelajaran/15_Bab_10f_OOP_Magic_Method.ipynb
+++ b/pelajaran/15_Bab_10f_OOP_Magic_Method.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bab 10.f Pemrograman Berorientasi Objek Part 5: Magic Method\n",
+    "## Bab 10.f Pemrograman Berorientasi Objek Part 6: Magic Method\n",
     "Magic Method adalah method bawaan Python yang fungsinya melakukan tugas tertentu. Salah satu contohnya adalah `__init__` yang berfungsi sebagai constructor. Selain itu masih ada magic method lainnya."
    ]
   },
@@ -339,7 +339,7 @@
     "        return self.tahun >= objek.tahun\n",
     "            \n",
     "    ## membuat perbandingan <= dengan objek lain\n",
-    "    def __ge__(self, objek):\n",
+    "    def __lt__(self, objek):\n",
     "        if not isinstance(objek, SupraZ):\n",
     "            raise ValueError(\"Tidak bisa membandingkan dengan benda selain SupraZ!\")\n",
     "            \n",
